# Skeletor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
skeletor/: __init__.py  __main__.py  analyze.py  cache.py  diagram.py  export.py  layer.py  model.py  parse.py  report.py  scan.py  security.py  serve.py
skeletor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_analyze.py  test_cache.py  test_export.py  test_integration.py  test_layer.py  test_model.py  test_parse.py  test_scan.py  test_security.py  test_serve.py
